[gd_scene load_steps=12 format=3 uid="uid://bwrteriduaif5"]

[ext_resource type="Script" uid="uid://bciyi7nyjsoub" path="res://game/ui/ui.gd" id="1_nb4k0"]

[sub_resource type="Gradient" id="Gradient_tbgav"]
colors = PackedColorArray(0, 0.42352942, 0, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_k1bud"]
gradient = SubResource("Gradient_tbgav")

[sub_resource type="Gradient" id="Gradient_mg1dk"]
colors = PackedColorArray(0.5834435, 0.22453526, 0.6305052, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lwcc8"]
gradient = SubResource("Gradient_mg1dk")

[sub_resource type="Gradient" id="Gradient_w6dwl"]
colors = PackedColorArray(0.16711429, 0.34368154, 0.6446079, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fph73"]
gradient = SubResource("Gradient_w6dwl")

[sub_resource type="Gradient" id="Gradient_ikh6o"]
colors = PackedColorArray(0.68242913, 0.18569514, 0.21950665, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_f7g7r"]
gradient = SubResource("Gradient_ikh6o")

[sub_resource type="Gradient" id="Gradient_6cny8"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_24n6y"]
gradient = SubResource("Gradient_6cny8")
width = 1080
height = 1920

[node name="UI" type="Node"]
script = ExtResource("1_nb4k0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -123.0
offset_top = 18.0
offset_right = -23.0
offset_bottom = 218.0
grow_horizontal = 0
size_flags_horizontal = 10
size_flags_vertical = 2

[node name="CollectableContainer" type="GridContainer" parent="CanvasLayer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/PanelContainer/CollectableContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_k1bud")
expand_mode = 2
stretch_mode = 5

[node name="crystal_green" type="Label" parent="CanvasLayer/PanelContainer/CollectableContainer"]
layout_mode = 2
text = "0"

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/PanelContainer/CollectableContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_lwcc8")
expand_mode = 2
stretch_mode = 5

[node name="crystal_purple" type="Label" parent="CanvasLayer/PanelContainer/CollectableContainer"]
layout_mode = 2
text = "0"

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/PanelContainer/CollectableContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_fph73")
expand_mode = 2
stretch_mode = 5

[node name="crystal_blue" type="Label" parent="CanvasLayer/PanelContainer/CollectableContainer"]
layout_mode = 2
text = "0"

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer/PanelContainer/CollectableContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_f7g7r")
expand_mode = 2
stretch_mode = 5

[node name="crystal_pink" type="Label" parent="CanvasLayer/PanelContainer/CollectableContainer"]
layout_mode = 2
text = "0"

[node name="MenuStartBg" type="Sprite2D" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
position = Vector2(540, 960)
texture = SubResource("GradientTexture2D_24n6y")

[node name="GpsPanel" type="PanelContainer" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GpsLabel" type="Label" parent="CanvasLayer/GpsPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Loading GPS"
horizontal_alignment = 1
vertical_alignment = 1
